# voxbook

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pylint.yml
.github/workwlows/: ci.yml
src/voxbook/: cli.py  helpers.py  main.py
src/voxbook/playback/: context.py  exceptions.py  keyboard_controller.py  models.py  mpv_controller.py  player_actions.py  player_service.py  repository.py  status_renderer.py  types.py  validation.py
src/voxbook/storage/: db.py
tests/: conftest.py  test_config.py
tests/test_library/: test_models.py  test_scanner.py
tests/test_playback/: test_player_service.py  test_validation.py
tests/test_storage/: test_db.py
