[project]
name = "voxbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mutagen>=1.47.0",
    "natsort>=8.4.0",
    "python-mpv>=1.0.8",
    "readchar>=4.2.2",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
    "textual>=8.2.4",
    "typer>=0.24.2",
]

[project.scripts]
voxbook = "voxbook.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]  # E: pycodestyle errors, F: pyflakes errors, I: isort import issues
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]
